fix: Align products div at the top

--- a/public/style.css
+++ b/public/style.css
@@ -208,6 +208,7 @@ img {
   border: 1px solid #aaa;
   border-radius: 30px;
   display: inline-block;
+  vertical-align: top;
 }
 
 .products .image {
